tests/paczka1/small_fuzzy/53811092.err
Error in line 4: cXJpYV A677 38,1
Error in line 1: A677 A674 57,3
